# dedent

./: README.md  README.mdx  dedent.opam
src/: dedent.ml  dedent.mli  dune
test/: dedent_test.ml  dune  test_dedent.ml
