opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/dedent"
bug-reports: "https://github.com/janestreet/dedent/issues"
dev-repo: "git+https://github.com/janestreet/dedent.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/dedent/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "ppx_jane"
  "stdio"
  "dune"     {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "A library for improving redability of multi-line string constants in code."
description: "
A library for improving redability of multi-line string constants in code.
"
